# python-service

./: .gitignore  Dockerfile.test  Makefile  README.md  coverage.sh  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: pipeline.yml
api/: main.py
api/Repositories/: db.py  user_repository.py
api/Repositories/Documents/: user.py
api/controllers/: user_controller.py
api/models/: user.py
api/models/requests/: user.py
api/routes/: helpers.py  users.py
datadog/: Dockerfile
datadog/dashboard/: Example-Api--2021-07-01T20_49_42.json
tests/controllers/: test_user_controller.py
tests/models/: test_user.py
tests/repositories/: conftest.py  user_repository_test.py
web/: Dockerfile  Dockerfile.test  Makefile  README.md  pyproject.toml  wsgi.py
